<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MH4U Database</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="about_message">MH4U Database v1.04
                                \n\n
                                Contribute at:\n
                                https://github.com/kamegami13/MonsterHunter4UDatabase
                                \n\n
                                Based on data from:\n
                                Ping\'s Dex\n
                                monsterhunter.wikia.com\n
                                kiranico.com\n
                                wiki.mh4g.org\n
                                aegil.net
                                \n\n
                                A Special Thanks to:\n
                                Kiranico\n
                                Kogath at Monster Hunter Wikia\n
                                kaiiboraka\n
                                Ping\n
                                Aegil
        						</string>
    <string name="alert_button">Close</string>
    <string name="alert_rate">Rate!</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logo_description">Logo</string>
    <string-array name="drawer_items">
        <item>"Monsters,icons_items/Book-White.png"</item>
        <item>"Weapons,icons_weapons/icons_sword_and_shield/sword_and_shield1.png"</item>
        <item>"Armor,icons_armor/icons_body/body1.png"</item>
        <item>"Quests,icons_items/Quest-Icon-White.png"</item>
        <item>"Items,icons_items/Ore-White.png"</item>
        <item>"Combining,icons_items/Liquid-White.png"</item>
        <item>"Locations,icons_items/Map-Icon-White.png"</item>
        <item>"Decorations,icons_items/Jewel-White.png"</item>
        <item>"Skill Trees,icons_items/Monster-Jewel-White.png"</item>
        <item>"Wishlists,icons_items/Mantle-White.png"</item>
        <item>"Armor Set Builder,icons_items/Mantle-White.png"</item>
        <!--<item>"Armor Set Search,icons_items/Mantle-White.png"</item>-->
    </string-array> 

    <string name="option_list">List</string>
    <string name="option_grid">Grid</string>
    <string name="option_wishlist_add">Add wishlist</string>
    <string name="option_wishlist_delete">Delete wishlist</string>
    <string name="option_wishlist_copy">Copy wishlist</string>
    <string name="option_wishlist_rename">Rename wishlist</string>
    <string name="option_wishlist_data_add">Add to wishlist</string>
    <string name="option_wishlist_data_edit">Edit quantity</string>
    <string name="option_wishlist_data_delete">Delete from wishlist</string>
    <string name="search_title">Search item</string>
    <string name="monsters">Monsters</string>
    <string name="items">Items</string>
    <string name="locations">Locations</string>
    <string name="combining">Combining</string>
    <string name="quests">Quests</string>
    <string name="hunting_fleet">Hunting Fleet</string>
    <string name="skill_trees">Skill Trees</string>
    <string name="decorations">Decorations</string>
    <string name="armor">Armor</string>
    <string name="monster_image">monster_image</string>
    <string name="monster_damage">monster_damage</string>
    <string name="weapons">Weapons</string>
    <string name="arena_quests">Arena Quests</string>
    <string name="wishlist">Wishlists</string>
    <string name="icon_name">MH4U DB</string>


    <string name="activity_armor_set_builder">Armor Set Builder</string>
    <string name="armor_set_builder_add_piece">Add Armor</string>
    <string name="armor_set_builder_add_decoration">Add Decoration</string>
    <string name="armor_set_builder_remove_piece">Remove Armor</string>
    <string name="armor_set_builder_remove_decoration">Remove Decoration</string>
    <string name="armor_set_builder_piece_info">Piece Info</string>


    <string name="armor_set_builder_helmet">Helmet</string>
    <string name="armor_set_builder_body">Body</string>
    <string name="armor_set_builder_arms">Arms</string>
    <string name="armor_set_builder_waist">Waist</string>
    <string name="armor_set_builder_legs">Legs</string>
    <string name="armor_set_builder_skill_name">Skill</string>
    <string name="armor_set_builder_skill_points_total">Total</string>
    <string name="armor_set_builder_component_name">Component</string>
    <string name="armor_set_builder_component_total">Total</string>

    <string name="activity_armor_set_search">Armor Set Search</string>
    <string name="armor_set_search_switch_class">Armor Class</string>
    <string name="armor_set_search_switch_gender">Armor Gender</string>
    <string name="armor_set_search_allow_bad_skills">Allow Bad Skills (NO WORK)</string>
    <string name="armor_set_search_allow_arena_armor">Allow Arena Armor (NO WORK)</string>
    <string name="armor_set_search_allow_event_armor">Allow Event Armor (NO WORK)</string>
    <string name="armor_set_search_allow_excavated_armor">Allow Excavated Armor (NO WORK)</string>
    <string name="armor_set_search_allow_excavated_weapon">Allow Excavated Weapon (NO WORK)</string>
    <string name="armor_set_search_allow_lower_tier_armor">Allow Lower Tier Armor (NO WORK)</string>
    <string name="armor_set_search_add_skill_button">Add Skill</string>
    <string name="armor_set_search_button">Search</string>


    <string name="placeholder_unknown">Unknown</string>
</resources>