<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <Switch
        android:id="@+id/armor_set_search_switch_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_switch_class"
        android:textOn="BladeMaster"
        android:textOff="Gunner"
        />
    <Switch
        android:id="@+id/armor_set_search_switch_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_switch_gender"
        android:textOn="Male"
        android:textOff="Female"
        />

    <Switch
        android:id="@+id/armor_set_search_allow_bad_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_allow_bad_skills" />

    <Switch
        android:id="@+id/armor_set_search_allow_arena_armor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_allow_arena_armor" />

    <Switch
        android:id="@+id/armor_set_search_allow_event_armor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_allow_event_armor" />

    <Switch
        android:id="@+id/armor_set_search_allow_excavated_armor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_allow_excavated_armor" />

    <Switch
        android:id="@+id/armor_set_search_allow_excavated_weapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_allow_excavated_weapon" />

    <Switch
        android:id="@+id/armor_set_search_allow_lower_tier_armor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_set_search_allow_lower_tier_armor" />
</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content">
    <Button
        android:id="@+id/armor_set_search_add_skill_button"
        android:text="@string/armor_set_search_add_skill_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addRowBtn"
        android:layout_gravity="top"
        android:layout_weight="1" />

    <Button
        android:id="@+id/armor_set_search_button"
        android:text="@string/armor_set_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchArmorSets"
        android:layout_gravity="right"
        android:layout_weight="1" />
</LinearLayout>
</LinearLayout>



